# bike-routes-api

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d0006ccb1308_initial_schema.py  e880bdc82a89_add_api_keys_table.py
app/: main.py
app/leisure_routes/: models.py  repository.py  router.py  schemas.py  service.py
app/parking/: models.py  repository.py  router.py  schemas.py  service.py
app/rest_points/: models.py  repository.py  router.py  schemas.py  service.py
app/routes/: models.py  repository.py  router.py  schemas.py  service.py
app/shared/: auth.py  config.py  database.py  errors.py  geojson.py  middleware.py  models.py  observability.py  openapi.py  schemas.py  spatial.py
app/stations/: models.py  repository.py  router.py  schemas.py  service.py
data/raw/: estacionamentos_de_bicicleta.geojson  estacoes_bicicletar.geojson  fortaleza_ciclovias.geojson  pontos_de_descanso.geojson  rotas_ciclofaixa_de_lazer.geojson
docs/: ARCHITECTURE.md  DATA_SOURCES.md
observability/: prometheus.yml
scripts/: ingest.py  manage_keys.py
tests/: conftest.py  test_health.py  test_router_contract.py
tests/leisure_routes/: test_repository.py  test_router.py  test_service.py
tests/parking/: test_repository.py  test_router.py  test_service.py
tests/rest_points/: test_repository.py  test_router.py  test_service.py
tests/routes/: test_repository.py  test_router.py  test_service.py
tests/scripts/: test_ingest_cleaning.py  (+2 more)
(+10 files in other folders)
