[project]
name = "bike-routes-api"
version = "0.1.0"
description = "Free, secure REST API over Fortaleza's open bike infrastructure data."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
package = false
